--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Disaster_Alleviation_Foundation-72db0381-1a29-4640-aae6-f46ceef14fff;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:admin02.database.windows.net,1433;Initial Catalog=st10104146;Persist Security Info=False;User ID=admin02;Password=NTHmok@0320;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
